# informal

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  Justfile  LICENSE.txt  README.md  app.yaml  buildview.sh  deploy.sh  docker_run.sh  gulpfile.js  learn.md  mix.exs  notes.txt  package-lock.json  package.json  pyproject.toml  readme.md  requirements-vendor.txt  requirements.txt  run.sh  tsconfig.json  webpack.config.js
Code/: readme.md
Code/Compiler/: .gitignore  Justfile  build.zig  build.zig.old  build.zig.zon
Code/Informal/: base_syntax.infr  meta_parser.ifi
Docs/Devlog/: readme.md
Docs/Examples/: comments.if
Docs/Posts/: 06 - Garbage Collection.md
Docs/Reference/: grammar.md
Docs/Specs/: 2026-04-02-functions-and-lazy-params.md  2026-04-07-refined-resolution.md  2026-04-12-nary-inline-expansion.md  2026-04-12-simplify-paren-chain.md  2026-04-17-group-chain-iter.md  2026-04-19-parser-simplification.md  codegen-spec.md  function-def-lazy-expansion-plan.md  inline-expansion-spec.md  ir.md  ir_sequence.md  lexer-spec.md  lexer.md  nary-expansion-design-v2.md  parser-spec.md  parser.md  regalloc.md  resolution-spec.md  resolution.md
Documentation/Guide/: tutorial.md
Documentation/Posts/: 01 - Semantics.md
Sources/Bootstrap/rust/experiments/: Cargo.toml
Sources/Bootstrap/rust/experiments/src/: lib.rs
Sources/Former/: .gitignore  Justfile  README.md  build.zig  bun.lockb  bunfig.toml  hello.infr  package.json  readme.md
Sources/Informal/: informal.infr  meta_parser.if  parser.ifi
Sources/Minformal/: .gitignore  Justfile  README.md  (+7 more)
Tests/: Justfile  generate.py  package-lock.json  package.json
appy/: pyproject.toml
appy/api/: urls.py
appy/appy/: amplitude.py  forms.py  middleware.py  urls.py  wsgi.py
appy/editor/: admin.py  constants.py  forms.py  models.py  services.py  utils.py  views.py
appy/editor/migrations/: 0001_initial.py  0002_auto_20200106_0337.py  0003_view_uuid.py  0005_auto_20200822_0106.py  0006_cell_view.py
appy/editor/templatetags/: datautils.py
appy/static/: .babelrc  gulpfile.js  package-lock.json  package.json  webpack.config.js
appy/static/css/: app.css  base.css  base.scss  landing.css  syntax.css
appy/static/js/: app.js  constants.js  controller.js  store.js  utils.js
appy/static/js/componenets/: AbstractBaseCell.js  ActionBar.js  CellParam.js  CellValue.js  EditableLabel.js  Grid.js  GridCell.js  GridList.js  KVTable.js  Sidebar.js  prism-aa.js
appy/static/js/engine/: Cell.js  Cell.test.js  CellEnv.js  CellEnvironment.js  Environment.js  Stream.js  builtins.js  compiler.js  core.js  engine.js  engine.test.js  executor.js  flex.js  flex.test.js  generator.js  generator.test.js  iter.js  lexer.js  lexer.test.js  namespace.js  order.js  parser.js  parser.test.js  textual.js  textual.test.js
appy/static/js/utils/: QIter.js  Queue.js  ast.js  cell.js  index.js  shortuuid.js  type.js
appy/templates/: _messages.html  _navbar.html  _preserve.html  base.html  index.html
appy/templates/account/: base.html  login.html  password_reset.html  signup.html
appy/templates/account/email/: email_confirmation_message.html  email_confirmation_message.txt  email_confirmation_subject.txt
appy/templates/docs/: getting_started.html  tutorial.md
appy/templates/editor/: app_create_form.html  app_detail.html  app_form.html  app_list.html  index.html  view_detail.html
appy/templates/legal/: privacy.html  terms.html
arevel/: Cargo.toml  middleware.py  urls.py
arevel-ex/: app.yaml  package-lock.json
arevel-py/: requirements.txt
arevelcore/: amplitude.py  apps.py  forms.py  middleware.py  signals.py
assets/: package-lock.json  package.json  postcss.config.js  webpack.config.js
av0/: README.md  app.yaml  appengine_config.py  cron.yaml  gulpfile.js  manage.py  old_package.json  package-lock.json  prodmanage.sh  run.sh  watch.sh  webpack.config.js
avgen/: Cargo.toml  build.sh
avs/: Cargo.toml  avs.wat  build.sh  fb_compile.sh  readme.md
avs/src/: avfb.fbs  avfb_generated.rs  avobj.fbs  avobj_generated.rs  constants.rs  environment.rs  error.rs  expression.rs  format.rs  functions.rs  lib.rs  macros.rs  operators.rs  runtime.rs  structs.rs  types.rs  utils.rs
avwasm/: avfb_generated.rs  generator.rs  repl.rs
avweb/: Cargo.toml
avweb/src/: main.rs
avweb/static/: package.json  webpack.config.js
avweb/static/css/: app.css
avweb/static/js/: app.js  constants.js  controller.js  utils.js
avweb/templates/: index.html
avweb/templates/editor/: index.html.leex
built/: main.js  main.js.map
code/: models.py
config/: config.exs  dev.exs  prod.exs  test.exs
docs/: data_format.json  data_format.md  dev.md  todo.org
informal/: base_syntax.if  meta_parser.if
kubernetes/: deployment.yaml  ingress.yaml  nginx.yaml  replication-container.yaml  service.yaml
lib/: arevel_web.ex
rel/: config.exs
runtime/: Cargo.toml
runtime/src/: ast.rs  constants.rs  dependency.rs  error.rs  format.rs  generator.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  repl.rs  request.rs  sharedmemory.rs  structs.rs  tests.rs
site/: Cargo.toml
site/migrations/2019-11-14-230438_create_apps/: up.sql
site/migrations/2019-11-14-230443_create_views/: down.sql  up.sql
site/migrations/2019-11-14-230448_create_routes/: down.sql  up.sql
site/src/: coreapi.rs  hs.rs  main.rs  models.rs  schema.rs  services.rs
site/static/: package-lock.json  package.json  postcss.config.js
site/static/css/: app.css  landing_base.css
site/static/js/: app.js  constants.js  controller.js  grid.js  store.js
site/static/js/componenets/: AbstractBaseCell.js  Grid.js  GridCell.js  GridList.js
site/templates/: index.html  landing.html
src/: bench.rs  error.rs  generator.rs  lexer.rs  lib.rs  main.rs  parser.py  parser.rs  repl.rs  server.rs  wat.rs
templates/: _analytics.html  _messages.html  _navbar.html  base.html  doc.html  docs_list.html  index.html  landing.html  landing_static.html  mybase.html  original_landing.html  workspace.html
tests/: eval_test.if  parser_test.if
workspace/: models.py  services.py  tests.py  views.py
(+443 files in other folders)
