[package]
name = "arevel"
version = "0.1.0"
authors = ["Feni Varughese <feni727@gmail.com>"]
edition = "2018"

[dependencies]
# actix-web = "0.7"
# serde_derive = "1.0.93"
# serde = "1.0.93"
# 0.5.1 as yet unpublished
# wasmer-runtime-core = { git = "https://github.com/wasmerio/wasmer", rev = "09177ac3aee69ad6145322d104c2778525d03130" }
# wasmer-runtime = { git = "https://github.com/wasmerio/wasmer", rev = "09177ac3aee69ad6145322d104c2778525d03130" }
wasmer-runtime = "0.4.2"
wabt = "0.7.4"
nom = "5.0.0"
lexical = "2.2.1"   # Floating point parsing


# Allow us to catch panics in parsing, eval etc. without bringing down the system.
[profile.debug]
panic = "unwind"

[profile.release]
panic = "unwind"

[buiild]
rustflags = "-C target-cpu=native"
