[package]
name = "arevel"
version = "0.1.0"
authors = ["Feni Varughese <feni727@gmail.com>"]
edition = "2018"
#include = [
#  "runtime/**/*",
#]


[workspace]
members = [
  "avs",
  "site",
  "runtime"
]

[dependencies]
runtime = { path = "runtime" }


# Allow us to catch panics in parsing, eval etc. without bringing down the system.
[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

