[package]
name = "avs"
version = "0.1.0"
authors = ["Feni Varughese <feni727@gmail.com>"]
edition = "2018"

[build]
target = "wasm32-unknown-unknown"

[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]
