[package]
name = "avs"
version = "0.1.0"
authors = ["Feni Varughese <feni727@gmail.com>"]
edition = "2018"

#[build]
# target = "wasm32-unknown-unknown"
# Arevel: Targets unknown-emscripten because libc malloc & free is unsupported on unk-unk
# [build]
# target = "wasm32-unknown-emscripten"

# rlib??
[lib]
crate-type = ["cdylib", "rlib"]

# [features]
# default = ["console_error_panic_hook"]

[dependencies]
serde = "1.0.94"
serde_derive = "1.0.94"
lazy_static = "1.3.0"
serde_json = "1.0.40"
libc = "0.2.59"
wee_alloc = "0.4.4"

# Arevel: Do not use wee_alloc without additional verification to make sure it meets all the 
# malloc/free semantics. Stick with the standard one for now. 

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies.wasm-bindgen]
version = "0.2.47"
# Feni: Disabled after a quick read of cloudflare/serde-wasm-bindgen
# features = ["serde-serialize"]
