[package]
name = "avweb"
version = "0.1.0"
authors = ["Feni Varughese <feni727@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
askama = "0.8.0"
serde_derive = "1.0.94"
serde = "1.0.94"
futures = "0.1.28" 
hyper-staticfile = "0.3.1"
http = "0.1.17"
chrono = "0.4.7"
url = "1.7.0"

[dev-dependencies]
tempdir = "0.3.7"
