[package]
name = "site"
version = "0.1.0"
authors = ["Feni Varughese <feni727@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.102"
serde = "1.0.102"
futures = "0.3.1" 
http = "0.1.19"
url = "2.1.0"
runtime = { path = "../runtime" }
serde_json = "1.0.41"
actix-web = "1.0.9"
actix-files = "0.1.7"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
lazy_static = "1.4.0"
r2d2 = "0.8"



[dev-dependencies]
tempdir = "0.3.7"
