[package]
name = "experiments"
version = "0.1.0"
authors = ["Feni Varughese <feni727@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
sorts = "0.6.1"

[[bin]]
name = "sort"
path = "src/lib.rs"